# reforis-plugins-template

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  cookiecutter.json  prepare_template.sh
hooks/: pre_gen_project.py
reforis-{{cookiecutter.plugin_name_kebab}}/: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  pylintrc  pyproject.toml  setup.py
reforis-{{cookiecutter.plugin_name_kebab}}/js/: jest.config.js  package-lock.json  package.json  webpack.config.js
reforis-{{cookiecutter.plugin_name_kebab}}/js/src/: API.js  app.js
reforis-{{cookiecutter.plugin_name_kebab}}/js/src/__mocks__/: axios.js  styleMock.js
reforis-{{cookiecutter.plugin_name_kebab}}/js/src/{{cookiecutter.plugin_name_camel}}/: {{cookiecutter.plugin_name_camel}}.js
reforis-{{cookiecutter.plugin_name_kebab}}/js/src/{{cookiecutter.plugin_name_camel}}/__tests__/: {{cookiecutter.plugin_name_camel}}.test.js
reforis-{{cookiecutter.plugin_name_kebab}}/js/src/{{cookiecutter.plugin_name_snake}}/: {{cookiecutter.plugin_name_camel}}.js
reforis-{{cookiecutter.plugin_name_kebab}}/js/src/{{cookiecutter.plugin_name_snake}}/__tests__/: {{cookiecutter.plugin_name_camel}}.test.js
reforis-{{cookiecutter.plugin_name_kebab}}/reforis_{{cookiecutter.plugin_name_snake}}/: __init__.py
reforis-{{cookiecutter.plugin_name_kebab}}/tests/: conftest.py  test_api.py  test_example.py  utils.py
reforis-{{cookiecutter.plugin_name_minuses}}/: Makefile  babel.cfg  setup.py
reforis-{{cookiecutter.plugin_name_minuses}}/js/: package.json
reforis_{{cookiecutter.plugin_name_snake}}/: MANIFEST.in  Makefile  README.md  setup.py
reforis_{{cookiecutter.plugin_name_snake}}/js/: package.json  webpack.config.js
(+11 files in other folders)
